@@ -47,7 +47,6 @@ import java.util.stream.IntStream;
 import static com.hedera.services.state.merkle.internals.BitPackUtils.packedTime;
 import static com.hedera.services.utils.MiscUtils.asTimestamp;
 import static java.util.stream.Collectors.joining;
-import static java.util.stream.Collectors.toList;
 
 public class ExpirableTxnRecord implements FCQueueElement {
 	public static final long UNKNOWN_SUBMITTING_MEMBER = -1;
@@ -495,7 +494,7 @@ public class ExpirableTxnRecord implements FCQueueElement {
 	public static List<TransactionRecord> allToGrpc(List<ExpirableTxnRecord> records) {
 		return records.stream()
 				.map(ExpirableTxnRecord::asGrpc)
-				.collect(toList());
+				.toList();
 	}
 
 	public TransactionRecord asGrpc() {
@@ -534,11 +533,11 @@ public class ExpirableTxnRecord implements FCQueueElement {
 		}
 		if (assessedCustomFees != NO_CUSTOM_FEES) {
 			grpc.addAllAssessedCustomFees(
-					assessedCustomFees.stream().map(FcAssessedCustomFee::toGrpc).collect(toList()));
+					assessedCustomFees.stream().map(FcAssessedCustomFee::toGrpc).toList());
 		}
 		if (newTokenAssociations != NO_NEW_TOKEN_ASSOCIATIONS) {
 			grpc.addAllAutomaticTokenAssociations(
-					newTokenAssociations.stream().map(FcTokenAssociation::toGrpc).collect(toList()));
+					newTokenAssociations.stream().map(FcTokenAssociation::toGrpc).toList());
 		}
 		if (alias != MISSING_ALIAS) {
 			grpc.setAlias(alias);
